Fixed a layout bug when using sticky toc

--- a/manual/new/styles/basic.css
+++ b/manual/new/styles/basic.css
@@ -154,8 +154,8 @@ pre .comment {
 
 #sidebar {
     float: right;
-    margin: 0;
-    padding: 1em;
+    margin: 1em;
+    padding: 0;
 }
 
 #wrap {
